--- a/makefile.mingw_x86_64
+++ b/makefile.mingw_x86_64
@@ -1,17 +1,19 @@
-CFLAGS= -I./
+CFLAGS= -I./src
+
 LDFLAGS=-lwsock32 -lws2_32 -lmingwex
 
-GNB_UDP_OVER_TCP=service/gnb_udp_over_tcp.exe
+GNB_UDP_OVER_TCP=gnb_udp_over_tcp.exe
+
 
 include makefile.inc
 
 
-GNB_EVENT_OBJS += ./event/select_event_handler.o
+GNB_EVENT_OBJS += ./src/event/select_event_handler.o
 
 
 all:$(GNB_UDP_OVER_TCP)
-	mkdir -p ../bin/
-	cp $(GNB_UDP_OVER_TCP) ../bin/
+	mkdir -p ./bin/
+	cp $(GNB_UDP_OVER_TCP) ./bin/
 
 
 $(GNB_UDP_OVER_TCP): $(GNB_UDP_OVER_TCP_OBJS) $(GNB_EVENT_OBJS)
@@ -22,8 +24,8 @@ $(GNB_UDP_OVER_TCP): $(GNB_UDP_OVER_TCP_OBJS) $(GNB_EVENT_OBJS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 clean:
-	rm -f *.o
-	rm -f service/*.o event/*.o service/core
+	rm -f ./src/*.o
+	rm -f ./src/service/*.o ./src/event/*.o
 	rm -f $(GNB_UDP_OVER_TCP)
 	rm -f core
 
